@@ -1,3 +1,8 @@
+Sun Sep 30 14:41:52 2001  George Lebl <jirka@5z.com>
+
+	* gnome-program.c: free data on finalize, copy argv stuff, and a bit
+	  of cleanup
+
 2001-09-28 Mark McLoughlin  <mark@skynet.ie>
 
 	* libgnome/gnome-program.h: add lame GNOME_PARAM_NONE
